--- a/css/style.css
+++ b/css/style.css
@@ -5,174 +5,219 @@
 
 
 /*OVERALL PAGE FORMATTING, DO NOT EDIT*/
-html,body{
-    height:100%;
+html,
+body {
+    height: 100%;
 }
-body{
-    margin:0;
+
+body {
+    margin: 0;
 }
 
 /*FONT LOADING*/
 /*Update with selected Google Font*/
-body, .leaflet-popup-content{
+body,
+.leaflet-popup-content {
     font-family: "Quicksand", sans-serif !important;
 }
-#splash-title, #stop-title, #navbarNav, #start, #prev, #next, #title-container, #nav-title{
+
+#splash-title,
+#stop-title,
+#navbarNav,
+#start,
+#prev,
+#next,
+#title-container,
+#nav-title {
     font-family: tanach;
 }
 
 /*BUTTON STYLING*/
 /*Color and border design for all buttons*/
-button{
-    border:2px black solid;
-    background:rgba(255,255,255,1);
-    font-size:20pt !important;
+button {
+    border: 2px black solid;
+    background: rgba(255, 255, 255, 1);
+    font-size: 20pt !important;
 }
-button:hover{
-    background:rgba(240,240,240,1);
+
+button:hover {
+    background: rgba(240, 240, 240, 1);
 }
 
 /*MAP INTERFACE*/
 /*MAP*/
-#map{
-    width:100vw;
-    height:100%;
-    position:absolute;
+#map {
+    width: 100vw;
+    height: 100%;
+    position: absolute;
 }
+
 /*LOCATION BUTTON ("Where am I")*/
-.location-button{
-    display:block;
-    width:180px;
-    height:40px;
-    bottom:35px;
-    right:calc(50% - 90px);
-    font-size:25px;
-    position:absolute;
-    font-weight:bold;
-    z-index:500;
+.location-button {
+    display: block;
+    width: 180px;
+    height: 40px;
+    bottom: 35px;
+    right: calc(50% - 90px);
+    font-size: 25px;
+    position: absolute;
+    font-weight: bold;
+    z-index: 500;
 }
+
 /*STOP STYLING*/
-.active-stop{
-    fill:rgb(212,175,55);
-    stroke:black;
+.active-stop {
+    fill: rgb(255, 234, 0);
+    stroke: black;
 }
-.inactive-stop{
-    fill:rgb(245, 245, 183);
-    stroke:black;
+
+.inactive-stop {
+    fill: rgb(255, 253, 208);
+    stroke: black;
 
 }
+
 /*ROUTE STYLING*/
-.active-route{
-    stroke:rgb(117, 188, 255);
+.active-route {
+    stroke: rgb(117, 188, 255);
 }
-.inactive-route{
-    stroke:gray;
+
+.inactive-route {
+    stroke: whitesmoke;
 }
+
 /*For Optional Last point*/
-.route-7{
-    stroke-dasharray:5 15;
+.route-7 {
+    stroke-dasharray: 5 15;
 }
 
 
 /*NAVIGATION BAR*/
-.tour-navbar, .dropdown-menu{
-    z-index:2000;/*do not edit the z-index*/
-    background-color:rgb(5,67,124)!important; /*background color of navigation bar*/
-    color: rgb(212,175,55) !important; 
+.tour-navbar,
+.dropdown-menu {
+    z-index: 2000;
+    /*do not edit the z-index*/
+    background-color: rgb(5, 67, 124) !important;
+    /*background color of navigation bar*/
+    color: rgb(212, 175, 55) !important;
     font-size: 25px;
 }
-.tour-navbar a{
-    color: rgb(212,175,55) !important;  
+
+.tour-navbar a {
+    color: rgb(212, 175, 55) !important;
     font-size: 25px;
 }
-.dropdown-item a{
-    color: rgb(212,175,55) !important; 
+
+.dropdown-item a {
+    color: rgb(212, 175, 55) !important;
 }
+
 /*stop buttons in navigation bar*/
-.dropdown-menu{
-    border:none !important;
-    color: rgb(212,175,55) !important; 
+.dropdown-menu {
+    border: none !important;
+    color: rgb(212, 175, 55) !important;
 }
-.dropdown-item{
+
+.dropdown-item {
     white-space: wrap !important;
-    color: rgb(212,175,55) !important; 
+    color: rgb(212, 175, 55) !important;
     font-size: 25px;
 }
-.dropdown-item:hover{
-    cursor:pointer;
-    color: rgb(212,175,55) !important; 
+
+.dropdown-item:hover {
+    cursor: pointer;
+    color: rgb(212, 175, 55) !important;
 }
 
 /*SPLASH SCREEN STYLING*/
-#splash-dialogue, #splash-content, #splash-modal{
-    background-color: rgb(5,67,124);/*background color of the splash screen*/
-    color: rgb(212,175,55);/*text color of the splash screen*/
-    margin:0;
+#splash-dialogue,
+#splash-content,
+#splash-modal {
+    background-color: rgb(5, 67, 124);
+    /*background color of the splash screen*/
+    color: rgb(212, 175, 55);
+    /*text color of the splash screen*/
+    margin: 0;
     max-width: 100vw !important;
-    width:100vw !important;
-    height:100vh !important;
-    z-index:5000;
+    width: 100vw !important;
+    height: 100vh !important;
+    z-index: 5000;
 }
-#splash-body{
-    height:100%;
-    padding-bottom:20px;
-    overflow:auto;
+
+#splash-body {
+    height: 100%;
+    padding-bottom: 20px;
+    overflow: auto;
     -webkit-overflow-scrolling: touch;
 }
-#splash-title{
-    font-size:55px;
+
+#splash-title {
+    font-size: 55px;
     font-weight: bold;
 }
-#splash-content p{
-    font-size:18px;
+
+#splash-content p {
+    font-size: 18px;
 }
-#start{
-    margin:auto;
-    display:block;
+
+#start {
+    margin: auto;
+    display: block;
 }
 
 /*STOP CONTENT STYLING*/
-#stop-modal{
-    z-index:3000;
+#stop-modal {
+    z-index: 3000;
 }
-#title-container{
-    padding-left:10px;
+
+#title-container {
+    padding-left: 10px;
 }
-#stop-content{
-    background:white; /*adjust background color of stop*/
-    color:black; /*adjust font color of stop*/
-    width:100vw;
-    margin:0;
+
+#stop-content {
+    background: white;
+    /*adjust background color of stop*/
+    color: black;
+    /*adjust font color of stop*/
+    width: 100vw;
+    margin: 0;
     border-radius: 0;
 }
-#stop-dialogue{
-    height:100%;
-    margin:0;
+
+#stop-dialogue {
+    height: 100%;
+    margin: 0;
 }
-#stop-body{
-    height:100%;
-    overflow:scroll;
+
+#stop-body {
+    height: 100%;
+    overflow: scroll;
 }
-#stop-img{
-    width:100%;
+
+#stop-img {
+    width: 100%;
 }
-#stop-text{
-    margin-top:10px;
-    font-size:20px;
+
+#stop-text {
+    margin-top: 10px;
+    font-size: 20px;
 }
-#stop-footer{
-    display:block !important;
+
+#stop-footer {
+    display: block !important;
 }
-#prev{
-    float:left;
+
+#prev {
+    float: left;
 }
-#next{
-    float:right;
+
+#next {
+    float: right;
 }
 
 /*RESPONSIVE DESIGN*/
 @media (min-width: 992px) {
-    .dropdown-menu{
-        width:300px;
+    .dropdown-menu {
+        width: 300px;
     }
 }
