--- a/css/style.css
+++ b/css/style.css
@@ -140,7 +140,7 @@ button:hover {
     margin: 0;
     max-width: 100vw !important;
     width: 100vw !important;
-    height: 100vh !important;
+    height: 100% !important;
     z-index: 5000;
 }
 
